# data_transmission

./: CMakeLists.txt  README.md  config.json  main.cpp  tcpclient.cpp  tcpserver.cpp
configReader/: configReader.cpp  configReader.h
tcp/: tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
udp/: udpreceiver.cpp  udpreceiver.h
